Closed
Bug 1272468
Opened 9 years ago
Closed 9 years ago
Video cannot be played since bug 868333
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: soeren.hentzschel, Unassigned)
References
Details
(Keywords: regression)
Attachments
(1 file)
STR:
Go to http://www.handstaubsaugerprofi.de/modelle/preisknaller-bosch-bks4003/
Expected:
The video works.
Actual:
"No video with supported format and MIME type found".
Last good revision: 460768b65147880bec72531c90ae4f5321e8049f
First bad revision: 853eec3a627201438830cc4646ddc0dd9c16ca50
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=460768b65147880bec72531c90ae4f5321e8049f&tochange=853eec3a627201438830cc4646ddc0dd9c16ca50
Comment 1•9 years ago
|
||
The file has major brand 'mmp4' and minor brand '3gp5'. It is currently recognized as video/3gpp, which is only supported on B2G [1].
Jean-Yves, 'mmp4' is listed as a known brand for video/mp4 in [2]. Do you think it's okay to be added to sniffer? Thanks.
[1] https://dxr.mozilla.org/mozilla-central/source/dom/media/fmp4/MP4Decoder.cpp#106
[2] http://www.ftyps.com/index.html
Flags: needinfo?(jyavenard)
Updated•9 years ago
|
Component: Audio/Video → Audio/Video: Playback
Comment 2•9 years ago
|
||
Looking at what changed in the likely commit: https://hg.mozilla.org/integration/mozilla-inbound/rev/4ac775c9f8ed
Previously it use to accept isom and iso2. Why were those removed in the first place? What was the logic for the choice discussed behind bug 86833 comment 4?
I think all registered video/MP4 brand should be added to the list allowed, so we don't have to keep adding them on a case by case basis, whenever we find a new video not playing.
In the worse case and a video doesn't play, we will know when actually attempting to play it. No point refusing it before even trying...
Flags: needinfo?(jyavenard)
Comment 3•9 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #2)
> Looking at what changed in the likely commit:
> https://hg.mozilla.org/integration/mozilla-inbound/rev/4ac775c9f8ed
>
> Previously it use to accept isom and iso2. Why were those removed in the
> first place? What was the logic for the choice discussed behind bug 86833
> comment 4?
I removed them because bug 868333 comment 1 says to match the MIME sniffer spec [1], and [2] says isom/iso2 are prohibited by ISO/IEC 14496-12. Not a good decision. :-/
[1] https://mimesniff.spec.whatwg.org/#signature-for-mp4
[2] http://www.ftyps.com/index.html#5
>
> I think all registered video/MP4 brand should be added to the list allowed,
> so we don't have to keep adding them on a case by case basis, whenever we
> find a new video not playing.
>
> In the worse case and a video doesn't play, we will know when actually
> attempting to play it. No point refusing it before even trying...
Agreed. According to [3], the brands for video/mp4 that our sniffer doesn't currently have are 'mmp4', 'F4?' (for Flash), and 'ND??' (for Nero). It seems to me the last 2 are pure proprietary brands. Do you think we should include them too?
Flags: needinfo?(jyavenard)
Comment 4•9 years ago
|
||
(In reply to John Lin [:jolin][:jhlin] from comment #3)
> (In reply to Jean-Yves Avenard [:jya] from comment #2)
> > Looking at what changed in the likely commit:
> > https://hg.mozilla.org/integration/mozilla-inbound/rev/4ac775c9f8ed
> >
> > Previously it use to accept isom and iso2. Why were those removed in the
> > first place? What was the logic for the choice discussed behind bug 86833
> > comment 4?
>
> I removed them because bug 868333 comment 1 says to match the MIME sniffer
> spec [1], and [2] says isom/iso2 are prohibited by ISO/IEC 14496-12. Not a
> good decision. :-/
ISO 14496-12 is ISOBMFF, that's rather recent
There are plenty of other mp4 that predates it; in particular quicktime videos which are mostly compatible.
I guess the spec states that we can't use them within a video/audio element, but as we also allow playback outside a video element.
Question then is, are other web browsers supporting those files? including IE and Safari.
If you feel that those videos shouldn't play within the web browser, feel free to close it as INVALID
I'm rather a stickler for rules and specs, so I'm not too concerned about it, and those weird formats need to die, and the web sites needs to update their videos.
Flags: needinfo?(jyavenard)
Comment 5•9 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #4)
> (In reply to John Lin [:jolin][:jhlin] from comment #3)
> Question then is, are other web browsers supporting those files? including
> IE and Safari.
>
Thanks a lot for the suggestion.
Chrome, IE 11, and Edge all play 'mmp4' video and Safari doesn't. IMHO we should support it, too.
Couldn't find Flash MP4 or Nero MP4 to test and don't feel like to support them.
Comment 6•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/52704/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/52704/
Attachment #8752669 -
Flags: review?(jyavenard)
Comment 7•9 years ago
|
||
Comment on attachment 8752669 [details]
MozReview Request: Bug 1272468 - Let sniffer support 'mmp4' ftyp brand. r?jya
https://reviewboard.mozilla.org/r/52704/#review49656
Attachment #8752669 -
Flags: review?(jyavenard) → review+
Comment 9•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in
before you can comment on or make changes to this bug.
Description
•