Bug 1272468 - Let sniffer support 'mmp4' ftyp brand. r=jya

MozReview-Commit-ID: IKHEILRmhKP